--- a/default.properties
+++ b/default.properties
@@ -1,3 +1,4 @@
 lang.debug = PL, EN
 lang.release = DE, FR, RU
-user.directory = C:\\ZWiWO_metalink_ant
+start.directory = C:\\ZWiWO_metalink_ant
+dest.directory = C:\\ZWiWO_metalink_ant
