--- a/default.properties
+++ b/default.properties
@@ -1,4 +1,4 @@
 lang.debug = PL, EN
 lang.release = DE, FR, RU
-start.directory = C:\\ZWiWO_metalink_ant
-dest.directory = C:\\ZWiWO_metalink_ant\\zad-zwiwo.xml
+url.directory = http://zad-zwiwo.com/download/
+file.directory = zad-zwiwo.xml
